--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^5.0.3",
     "@adonisjs/session": "^1.0.23",
     "@adonisjs/shield": "^1.0.6",
+    "@adonisjs/validator": "^5.0.3",
     "mysql": "^2.15.0"
   },
   "devDependencies": {},
